[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/GDEditor/Components/Attachments/PortRect.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/GDEditor/Components/Attachments/WaitSection.gd" type="Script" id=2]

[node name="WaitSection" type="HBoxContainer"]
margin_left = 15.0
margin_top = 62.0
margin_right = 194.0
margin_bottom = 86.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 0
custom_constants/separation = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InPortRef" parent="." instance=ExtResource( 1 )]
s_port_enable = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="ValueEdit" type="LineEdit" parent="."]
margin_left = 10.0
margin_right = 104.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="VSeparator" type="VSeparator" parent="."]
margin_left = 104.0
margin_right = 109.0
margin_bottom = 24.0
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeUnitLabel" type="Label" parent="."]
margin_left = 109.0
margin_right = 169.0
margin_bottom = 24.0
rect_min_size = Vector2( 60, 24 )
size_flags_horizontal = 8
text = "seconds"
align = 1
valign = 1

[node name="OutPortRef" parent="." instance=ExtResource( 1 )]
margin_left = 169.0
margin_right = 179.0
s_port_enable = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="focus_exited" from="ValueEdit" to="." method="_on_ValueEdit_focus_exited"]
